ig.tf
resource "aws_internet_gateway" "my_ig" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    "Name" = "Internet Gateway"
  }
}
